--- a/customer-service/customer-service/src/main/resources/application.properties
+++ b/customer-service/customer-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=CUSTOMER-SERVICE
 server.port=9090
 server.servlet.context-path=/customer-service
-
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
