--- a/order-service/order-service/pom.xml
+++ b/order-service/order-service/pom.xml
@@ -48,6 +48,14 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
