--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ORDER-SERVICE
 server.port=9092
 server.servlet.context-path=/order-service
-
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
 
