Enable Hystrix in API Gateway Service

--- a/api-gateway/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/api-gateway/src/main/resources/application.yml
@@ -48,6 +48,9 @@ management:
     web:
       exposure:
         include: hystrix.stream
+  endpoint:
+    hystrix:
+      enabled: true
 
 hystrix:
   command:
