--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=API-GATEWAY
+spring.main.web-application-type=reactive
+management.endpoints.web.exposure.include=hystrix.stream,*
