--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8090
 spring.application.name=API-GATEWAY
 spring.main.web-application-type=reactive
 management.endpoints.web.exposure.include=hystrix.stream,*
+spring.cloud.config.uri=http://localhost:8888
