--- a/discovery-server/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/discovery-server/src/main/resources/application.yml
@@ -4,5 +4,5 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8761
+  instance:
+    hostname: localhost
