--- a/product-service/product-service/src/main/resources/application.properties
+++ b/product-service/product-service/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=PRODUCT-SERVICE
 server.port=9091
 server.servlet.context-path=/product-service
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+spring.cloud.config.uri=http://localhost:8888
 
 
 
