Add actuator dependency and Refactor Centralized Configuration Fetching Approach
1. Add actuator dependency for getting application info.
2. Refactor Centralized Configuration Fetching Approach.
3. Add config package and move AppConfig to there.

--- a/customer-service/customer-service/pom.xml
+++ b/customer-service/customer-service/pom.xml
@@ -69,6 +69,12 @@
 			<version>4.1.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
