--- a/product-service/product-service/pom.xml
+++ b/product-service/product-service/pom.xml
@@ -69,6 +69,11 @@
 			<version>4.1.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
