Add bootstrap.yml for fetching config and also updated service info
1. Add bootstrap.yml for fetching centralized config.
2. Also updated service info (port, name, context path) dynamicall.
3. Also provided default value for service info.

--- a/product-service/product-service/src/main/resources/application.properties
+++ b/product-service/product-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=PRODUCT-SERVICE
-server.port=9091
-server.servlet.context-path=/product-service
-spring.cloud.config.uri=http://localhost:8888
+spring.application.name=${com.javabeans.product.service.name:PRODUCT-SERVICE}
+server.port=${com.javabeans.product.service.port:9091}
+server.servlet.context-path=${com.javabeans.product.service.context-path:/product-service}
+
 
 
 
