--- a/order-service/order-service/src/main/resources/application.properties
+++ b/order-service/order-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.application.name=ORDER-SERVICE
-server.port=9092
-server.servlet.context-path=/order-service
-spring.cloud.config.uri=http://localhost:8888
+spring.application.name=${com.javabeans.order.service.name:ORDER-SERVICE}
+server.port=${com.javabeans.order.service.port:9092}
+server.servlet.context-path=${com.javabeans.order.service.context-path:/order-service}
+
+
+
 
