--- a/customer-service/customer-service/src/main/resources/application.properties
+++ b/customer-service/customer-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=CUSTOMER-SERVICE
-server.port=9090
-server.servlet.context-path=/customer-service
-spring.cloud.config.uri=http://localhost:8888
+spring.application.name=${com.javabeans.customer.service.name:CUSTOMER-SERVICE}
+server.port=${com.javabeans.customer.service.port:9090}
+server.servlet.context-path=${com.javabeans.customer.service.context-path:/customer-service}
