--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8090
-spring.application.name=API-GATEWAY
+spring.application.name=${com.javabeans.api.gateway.service.name:API-GATEWAY}
+server.port=${com.javabeans.api.gateway.service.port:8090}
+
 spring.main.web-application-type=reactive
 management.endpoints.web.exposure.include=hystrix.stream,*
-spring.cloud.config.uri=http://localhost:8888
+
