--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=${com.javabeans.api.gateway.service.port:8090}
 spring.main.web-application-type=reactive
 management.endpoints.web.exposure.include=hystrix.stream,*
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
