--- a/api-gateway/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/api-gateway/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: "classpath:api-key/api-key-properties.yaml"
   cloud:
     gateway:
       default-filters:
@@ -9,6 +11,7 @@ spring:
           predicates:
             - Path=/product-service/**
           filters:
+            - name: ApiKeyFilter
             - name: CircuitBreaker
               args:
                 name: productService
@@ -19,6 +22,7 @@ spring:
           predicates:
             - Path=/order-service/**
           filters:
+            - name: ApiKeyFilter
             - name: CircuitBreaker
               args:
                 name: orderService
@@ -29,6 +33,7 @@ spring:
           predicates:
             - Path=/customer-service/**
           filters:
+            - name: ApiKeyFilter
             - name: CircuitBreaker
               args:
                 name: customerService
