--- a/api-gateway/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/api-gateway/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
           predicates:
             - Path=/product-service/**
           filters:
+            - name: AuthenticationFilter
             - name: CircuitBreaker
               args:
                 name: productService
@@ -19,6 +20,7 @@ spring:
           predicates:
             - Path=/order-service/**
           filters:
+            - name: AuthenticationFilter
             - name: CircuitBreaker
               args:
                 name: orderService
@@ -29,6 +31,7 @@ spring:
           predicates:
             - Path=/customer-service/**
           filters:
+            - name: AuthenticationFilter
             - name: CircuitBreaker
               args:
                 name: customerService
